# rak-basic

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
static/: index.html  protocol.html
static/css/: styles.css  tokens.css
static/js/: demo.js
temp/: redis_agent_kit-0.1.0-py3-none-any.whl
